# chess

./: .gitignore  CMakeLists.txt  chess.sln  chessGUI.sln
GUItest/: Bishop.h  GUItest.vcxproj  GUItest.vcxproj.filters  GameManager.h  King.h  Knight.h  Player.h  Position.h  Queen.h  ViewManager.h  glad.c  imgui.ini  main.cpp
GUItest/Debug/: vc142.idb
GUItest/Debug/GUItest.tlog/: GUItest.lastbuildstate
GUItest/Release/GUItest.tlog/: GUItest.lastbuildstate
GUItest/include/glad/: glad.h
GUItest/lib/: glfw3.lib
GUItest/x64/Release/: GUItest.exe.recipe  GUItest.ipdb  chessGUI.exe.recipe  chessGUI.ipdb
GUItest/x64/Release/GUItest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GUItest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GUItest/x64/Release/chessGUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  chessGUI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
chess/: Bishop.h  GameManager.h  King.h  Knight.h  Move.h  Pawn.h  Player.h  Position.h  Queen.h  Rook.h  ViewManager.h  chess.vcxproj  chess.vcxproj.filters  include.h  main.cpp
chess/Debug/: chess.exe.recipe  chess.ilk  vc142.idb
chess/Debug/chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  chess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
chess/x64/Debug/: chess.exe.recipe  chess.ilk  vc142.idb
chess/x64/Debug/chess.tlog/: CL.command.1.tlog  (+6 more)
code/: Bishop.h  GameManager.h  King.h  Knight.h  Move.h  Pawn.h  Player.h  Position.h  Queen.h  Rook.h  ViewManager.h  main.cpp
